--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "gray-matter": "^4.0.3",
     "next": "^14.2.0",
     "next-themes": "^0.4.6",
+    "nodemailer": "^8.0.1",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "remark": "^15.0.1",
-    "remark-html": "^16.0.1"
+    "remark-html": "^16.0.1",
+    "resend": "^6.9.2"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
